--- a/README
+++ b/README
@@ -1,11 +1,13 @@
-
 Things to do:
 
-0. Initialize project
+0. Record commands sent to project
+
+0. Initialize project -- DONE
 python tPipeInitialize.py project
 
-1. Add species to project
+1. Add species to project -- I wrote it, but need to test it
 python tPipeAddSpecies.py project  Human
+
 
 2. Print species
 
@@ -13,24 +15,29 @@ Without HLA: python tPipeListSpecies.py project
 
 With HLA: python tPipeListSpecies.py project --showHLA
 
-2. Add HLA to project
+2. Add HLA to project -- should be able to refer to species by either name or ID
 python tPipeAddHLA.py project HLA-A0201 1
 
-3. List HLAs:
+
+3. List HLAs -- should be able to refer to species by either name or ID:
 
 For all species: python tPipeListHLA.py project
 
 For a single species: python tPipeListHLA.py  project  1
 
+
+NOTE: For referring to FASTA files, Peptide lists, and NetMHC results, we should let the user enter their own ID (as a secondary ID).
+
 4. Add FASTA files to the project 
 python tPipeAddFASTA.py project proteins.fasta "The mouse proteome"
+
 
 5. List FASTA files in the project
 python tPipeListFASTA.py project
        ID ------ Name --- path
        1   |     The mouse proteome  | proteins.fasta
 
-6. Create peptide lists from a FASTA file
+6. Create peptide lists from a FASTA file -- should be able to refer to FASTA file by either name or ID
 python tPipeCreatePeptideList.py project 1 8 9 10 11
 
 7. Run a peptide list through NetMHC, and filter by rank
