--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 MS-GF+ and Tide are supported. I haven't kept up support with MaxQuant. 
 
-![alt text](https://imgs.xkcd.com/comics/data_pipeline_2x.png "Relevant XKCD Comic")
+
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
